# VS-Mod-Manager

./: README.md  pyproject.toml
.github/workflows/: auto-build.yml
data/icons/: Tabler-Icons-LICENSE
src/: main.py  mod_info_parser.py  mod_profiles.py  settings.py
src/ui/: __init__.py  local_mods_page.py  main_window.py  mod_index.py  settings_page.py  worker.py
src/views/: main_window.py  mod_index.py
src/vsmoddb/: client.py  models.py
